# SimpleRTTR

./: .gitignore  CMakeLists.txt  README.md
examples/codegen/: CMakeLists.txt  codegen.cpp  lua_helpers.h  main.cpp  point.cpp  point.h  readme.md  run_codegen.cpp
examples/codegen/objects/: customer.cpp  customer.h  order.cpp  order.h  point.cpp  point.h
examples/codegen/templates/: CMakeLists.txt.in  LuaTemplate.cpp.in
include/: hash.h  hash.inl  helpers.h  iterator.h  iterator.inl  meta.h  meta.inl  method.h  method.inl  property.h  property.inl  registration.h  registration.inl  simplerttr.h  simplerttr.inl  simplerttrassert.h  stdtypes.h  templateparameter.h  templateparameter.inl  typebinding.h  typebinding.inl  typedata.h  typedata.inl  typefunctions.h  typehelpers.h  typereference.h  typereference.inl  types.h  types.inl  value.h  value.inl  variant.h  variant.inl  variant_copy.inl  variant_tostring.inl
src/: types.cpp
test/: CMakeLists.txt  testallocator.cpp  testallocator.h  testconstructor.cpp  testenum.cpp  testfactory.cpp  testhash.cpp  testiterator.cpp  testmeta.cpp  testmethod.cpp  testpreprocessor.cpp  testproperties.cpp  testsimplerttr.cpp  testtemplate.cpp  testtypehelper.cpp  testtypeinstance.cpp  testtypes.cpp  testvariant.cpp  testvarianttostring.cpp
